# llmproject

./: README.md  app.py  index.html  main.py  ollama_llm  pyproject.toml  pytorch full tutorial.ipynb  requirements.txt
.ipynb_checkpoints/: micro-checkpoint.ipynb  micrograd_from_scratch_yay-checkpoint.ipynb
karpathy/LetsBuildGPT/r1/: bigram.py  get-dev.ipynb
karpathy/LetsBuildGPT/r1/.ipynb_checkpoints/: get-dev-checkpoint.ipynb  v2-checkpoint.py
karpathy/LetsBuildGPT/r2/: bigram.py  gpt_dev.ipynb  tempCodeRunnerFile.py  v2_bigramlaguage.py  v3_selfattention.py  v4_multihead.py  v5_feedforward.py  v6_Block.py
karpathy/LetsBuildGPT/r2/.ipynb_checkpoints/: gpt_dev-checkpoint.ipynb
karpathy/letsreproducegpt2/: eval_gpt2.py  fineweb.py  play.ipynb  train_gpt2.py  train_gpt2_multigpu.py  train_gpt2_multigpu_fineweb10B.py  train_gpt2_r2.py  train_gpt2_singlegpu.py
karpathy/micrograd/: Digraph.gv  micrograd_251207.ipynb  test_graph_manual
karpathy/micrograd/.ipynb_checkpoints/: micro-checkpoint.ipynb  micrograd_251207-checkpoint.ipynb
karpathy/tokenization/: tokenization.ipynb
karpathy/tokenization/.ipynb_checkpoints/: tokenization-checkpoint.ipynb
