[project]
name = "llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohappyeyeballs>=2.6.1",
    "aiohttp>=3.13.3",
    "aiosignal>=1.4.0",
    "anyio>=4.12.1",
    "appnope>=0.1.4",
    "argon2-cffi>=25.1.0",
    "argon2-cffi-bindings>=25.1.0",
    "asttokens>=3.0.1",
    "async-lru>=2.2.0",
    "async-timeout>=5.0.1",
    "attrs>=25.4.0",
    "babel>=2.18.0",
    "beautifulsoup4>=4.14.3",
    "bleach>=6.3.0",
    "bottleneck>=1.6.0",
    "brotli>=1.2.0",
    "brotlicffi>=1.2.0.0",
    "certifi>=2026.1.4",
    "cffi>=2.0.0",
    "charset-normalizer>=3.4.4",
    "comm>=0.2.3",
    "contourpy>=1.3.2",
    "cycler>=0.12.1",
    "datasets>=4.5.0",
    "debugpy>=1.8.20",
    "decorator>=5.2.1",
    "defusedxml>=0.7.1",
    "dill>=0.4.0",
    "et-xmlfile==1.1.0",
    "exceptiongroup>=1.3.1",
    "executing>=2.2.1",
    "fastapi[standard]>=0.129.2",
    "fastjsonschema>=2.21.2",
    "filelock>=3.24.3",
    "fonttools>=4.61.1",
    "frozenlist>=1.8.0",
    "fsspec>=2025.10.0",
    "gmpy2>=2.3.0",
    "graphviz==0.21",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httpx>=0.28.1",
    "huggingface-hub>=1.4.1",
    "idna>=3.11",
    "ipykernel>=7.2.0",
    "ipython>=8.38.0",
    "ipywidgets==8.1.8",
    "jedi>=0.19.2",
    "jinja2>=3.1.6",
    "json5>=0.13.0",
    "jsonschema>=4.26.0",
    "jsonschema-specifications>=2025.9.1",
    "jupyter-client>=8.8.0",
    "jupyter-core>=5.9.1",
    "jupyter-events>=0.12.0",
    "jupyter-lsp>=2.3.0",
    "jupyter-server>=2.17.0",
    "jupyter-server-terminals>=0.5.4",
    "jupyterlab>=4.5.4",
    "jupyterlab-pygments>=0.3.0",
    "jupyterlab-server>=2.28.0",
    "jupyterlab-widgets==3.0.16",
    "kiwisolver>=1.4.9",
    "lxml>=6.0.2",
    "markupsafe>=3.0.3",
    "matplotlib==3.10.0",
    "matplotlib-inline>=0.2.1",
    "micrograd==0.1.0",
    "mistune>=3.2.0",
    "mpmath>=1.3.0",
    "multidict>=6.7.1",
    "multiprocess>=0.70.18",
    "nbclient>=0.10.4",
    "nbconvert>=7.17.0",
    "nbformat>=5.10.4",
    "nest-asyncio>=1.6.0",
    "networkx>=3.4.2",
    "notebook-shim>=0.2.4",
    "numexpr>=2.14.1",
    "numpy>=2.2.6",
    "ollama>=0.6.1",
    "openpyxl>=3.1.5",
    "overrides>=7.7.0",
    "packaging>=26.0",
    "pandas>=2.3.3",
    "pandocfilters>=1.5.1",
    "parso>=0.8.6",
    "pexpect>=4.9.0",
    "pillow>=12.1.1",
    "platformdirs>=4.9.2",
    "prometheus-client>=0.24.1",
    "prompt-toolkit>=3.0.52",
    "propcache>=0.4.1",
    "psutil>=7.2.2",
    "ptyprocess>=0.7.0",
    "pure-eval>=0.2.3",
    "pyarrow>=23.0.1",
    "pycparser>=3.0",
    "pygments>=2.19.2",
    "pyparsing>=3.3.2",
    "pysocks>=1.7.1",
    "python-dateutil>=2.9.0.post0",
    "python-json-logger>=4.0.0",
    "pytz>=2025.2",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "referencing>=0.37.0",
    "regex>=2026.2.19",
    "requests>=2.32.5",
    "rfc3339-validator>=0.1.4",
    "rfc3986-validator>=0.1.1",
    "rpds-py>=0.30.0",
    "safetensors>=0.7.0",
    "send2trash>=2.1.0",
    "sentencepiece==0.2.1",
    "six>=1.17.0",
    "sniffio>=1.3.1",
    "soupsieve>=2.8.3",
    "stack-data>=0.6.3",
    "sympy>=1.14.0",
    "terminado>=0.18.1",
    "tiktoken==0.12.0",
    "tinycss2>=1.4.0",
    "tokenizers>=0.22.2",
    "tomli>=2.4.0",
    "torch==2.2.2",
    "tornado>=6.5.4",
    "tqdm>=4.67.3",
    "traitlets>=5.14.3",
    "transformers>=5.2.0",
    "typing-extensions>=4.15.0",
    "tzdata>=2025.3",
    "unicodedata2>=17.0.1",
    "urllib3>=2.6.3",
    "uvicorn>=0.41.0",
    "wcwidth>=0.6.0",
    "webencodings==0.5.1",
    "websocket-client>=1.9.0",
    "widgetsnbextension==4.0.15",
    "xxhash>=3.6.0",
    "yarl>=1.22.0",
]
